    is of priority required. Should help to debconfize tzdata.
  * sysdeps/i386.mk: put the static Xen libc flavour in /usr/lib/xen.  Closes:
    #391372.
  * sysdeps/powerpc.mk: install 64-bit headers (actually gnu/stubs-64.h)
    directly into /usr/include and provide /usr/include/powerpc64-linux-gnu as
    a symlink to /usr/include for compatibility reasons.  Closes: #391858.
  * kfreebsd/local-scripts.diff: update.
  * kfreebsd/local-sys_queue_h.diff: update.
  * kfreebsd/local-sysdeps.diff: update to revision 1689 (from glibc-bsd).
  * kfreebsd/local-sysdeps-2.4.diff: remove.
  * sysdeps/kfreebsd: enable the ports add-on.
  * sysdeps/kfreebsd-i386.mk: ditto.
  * any/local-stubs_h.diff: new patch to fix a warning in stubs.h.  Closes:
    #394128.
  * alpha/submitted-sigsuspend.diff: new patch (fix the build on alpha) from
    the libc-alpha mailing list.
  * debian/local/manpages/*: fix typos.  Closes: #395427.
  * debian/debhelper.in/libc.dirs: don't provide /sys, now provided by
    initscripts.
  * debian/debhelper.in/nscd.init: add lsb header.
  * debian/rules.d/debhelper.mk: add support for installing lintian and linda
    overrides files.
  * debian/debhelper.in/libc.overrides: new file.
  * debian/debhelper.in/libc-dev.overrides: new file.
  * debian/debhelper.in/libc-alt.overrides: new file.
  * debian/debhelper.in/libc-otherbuild.overrides: new file.
  * debian/debhelper.in/libc-dev-otherbuild.overrides: new file.
  * debian/any/submitted-getcwd-sys_param_h.diff: new patch (fix the build
    with linuxthreads) from the libc-alpha mailing list.
  * debian/powerpc/cvs-tls-debug.diff: new patch (fix for debugging
    thread-local variables on powerpc) from CVS.
  * Build depends on binutils (>= 2.17.50) to enable --hash-style linking.
    Closes: #405738.
  * Build depends on gcc-4.2 on hppa to enable TLS on hppa.  Closes: #397813.
  * debian/patches/hppa/cvs-hppa-update.diff: new patch (CVS update).