@@ -8,7 +8,15 @@ libc6-s390x_shlib_dep = libc6-s390x (>= $(shlib_dep_ver))
 s390x_extra_cflags = -g -O3
 s390x_slibdir = /lib64
 s390x_libdir = /usr/lib64
-s390x_extra_config_options := $(extra_config_options) --disable-profile
+s390x_extra_config_options := $(extra_config_options) --disable-profile \
+	--includedir=/usr/include/s390x-linux-gnu
+
+define libc6-dev-s390x_extra_pkg_install
+mkdir -p debian/libc6-dev-s390x/usr/include/gnu
+cp -af debian/tmp-s390x/usr/include/s390x-linux-gnu/gnu/stubs-64.h \
+        debian/libc6-dev-s390x/usr/include/gnu
+ln -sf /usr/include/ debian/libc6-dev-s390x/usr/include/s390x-linux-gnu
+endef
 
 define libc6-s390x_extra_pkg_install
 mkdir -p debian/$(curpass)/lib
